# rivet

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md
.github/workflows/: ci.yml
crates/codec/: Cargo.toml
crates/codec/src/: codec_strings.rs  filter.rs  frame.rs  gpu.rs  lib.rs  pixel_format.rs
crates/codec/src/decode/: amf_dec.rs  mod.rs  nvcodec_dec.rs  qsv_dec.rs  qsv_stub.rs
crates/codec/src/encode/: amf.rs  ffmpeg_enc.rs  mod.rs  nvenc.rs  nvenc_stub.rs  qsv.rs  qsv_p010.rs  qsv_stub.rs  tuning.rs
crates/codec/src/pixel_format/: av1.rs  bitreader.rs  h264.rs  hevc.rs  mod.rs  mpeg2.rs  tests.rs
crates/codec/tests/: nvenc_caps.rs
crates/container/: Cargo.toml
crates/container/src/: cmaf.rs  demux.rs  mux.rs  nal_mux.rs
crates/rivet/: Cargo.toml  README.md
crates/rivet/src/: cmaf_util.rs  decode_pump.rs  encoder_worker.rs  frame_queue.rs  gpu_pool.rs  job.rs  lib.rs  main.rs  manifest.rs  multigpu.rs  probe.rs  rung_scaler.rs  server.rs  settings.rs  spec.rs  transcode.rs
crates/rivet/src/commands/: batch.rs  capabilities.rs  devices.rs  ipc.rs  mod.rs  pipe.rs  probe.rs  serve.rs  splice.rs  transcode.rs
crates/rivet/src/encoder_worker/: chunk_worker.rs  cmaf_worker.rs  config.rs  invariant.rs  mod.rs  tests.rs
crates/rivet/src/job/: audio.rs  mod.rs  pump.rs  run.rs  splice.rs  tests.rs
crates/rivet/src/multigpu/: gpu_policy.rs  hls.rs  mod.rs  single_file.rs
crates/rivet/src/server/: docs.rs  (+4 more)
crates/rivet/tests/: e2e.rs  fidelity_ffprobe.rs  fidelity_pattern.rs  fidelity_psnr_ssim.rs  fidelity_sanity.rs
docs/: README.md  api.md  architecture.md  batch.md  cli.md  codec-decode.md  codec-encode.md  container.md  decisions.md  engine.md  filters.md  output-spec.md  pipeline.md
docs/filters/: README.md  brightness.md  contrast.md  crop.md  denoise.md  grayscale.md  hflip.md  invert.md  overlay.md  pad.md  rotate.md  saturation.md  vflip.md
examples/: batch.json  batch.yaml
(+59 files in other folders)
